--- a/app/views/reimboursements/_expense_fields.html.erb
+++ b/app/views/reimboursements/_expense_fields.html.erb
@@ -78,7 +78,7 @@
     <div class="col-md-6">
       <%= f.label :supplier, "Fornitore", class: "form-label" %>
       <%= f.text_field :supplier, class: "form-control", placeholder: "Es: Coop Alleanza 3.0 Scarl, Pizzeria da Gino SNC..." %>
-      <small class="form-text text-muted">Ragione socilae del fornitore o azienda</small>
+      <small class="form-text text-muted">Ragione sociale del fornitore o azienda</small>
     </div>
     
     <div class="col-md-6">
