--- a/app/views/bank_accounts/_form.html.erb
+++ b/app/views/bank_accounts/_form.html.erb
@@ -74,7 +74,7 @@
       <%= form.check_box :default, class: "form-check-input" %>
       <%= form.label :default, "Conto predefinito", class: "form-check-label" %>
     </div>
-    <small class="form-text text-muted">Se selezionato, questo diventerà il tuo unico conto predefinito (rimuoverà il flag da tutti gli altri conti bancari e PayPal)</small>
+    <small class="form-text text-muted">Se selezionato, questo diventerà il tuo conto predefinito (rimuoverà il flag da tutti gli altri conti bancari)</small>
   </div>
 
   <div class="col-12">
