--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -16,6 +16,7 @@
         <div class="col-md-6">
           <p><strong>Email:</strong> <%= @user.email %></p>
           <p><strong>Telefono:</strong> <%= @user.telephone %></p>
+          <p><strong>Codice Fiscale:</strong> <%= @user.fiscal_code %></p>
         </div>
         <div class="col-md-6">
           <p><strong>Ruolo:</strong> <%= @user.role&.label || "Nessun ruolo assegnato" %></p>
