--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -34,6 +34,14 @@
     </div>
 
     <div class="col-md-6">
+      <%= form.label :fiscal_code, "Codice Fiscale", class: "form-label" %>
+      <%= form.text_field :fiscal_code, class: "form-control", required: true, maxlength: 16,
+                          pattern: "[A-Za-z]{6}[0-9]{2}[A-Za-z][0-9]{2}[A-Za-z][0-9]{3}[A-Za-z]",
+                          title: "Codice fiscale italiano di 16 caratteri",
+                          style: "text-transform: uppercase;" %>
+    </div>
+
+    <div class="col-md-6">
       <%= form.label :role_id, "Ruolo", class: "form-label" %>
       <%= form.collection_select :role_id, Role.all, :id, :label, { prompt: "Seleziona un ruolo" }, { class: "form-select" } %>
     </div>
