--- a/app/views/devise/registrations/_user_fields.html.erb
+++ b/app/views/devise/registrations/_user_fields.html.erb
@@ -21,3 +21,12 @@
                   title: "Numero di telefono italiano senza spazi e senza prefisso (es: 3331234567)" %>
   <small class="form-text text-muted">Numero italiano senza spazi e senza prefisso +39: 3331234567</small>
 </div>
+
+<div class="col-md-6">
+  <%= f.label :fiscal_code, "Codice Fiscale", class: "form-label" %>
+  <%= f.text_field :fiscal_code, class: "form-control", required: true, maxlength: 16,
+                  pattern: "[A-Za-z]{6}[0-9]{2}[A-Za-z][0-9]{2}[A-Za-z][0-9]{3}[A-Za-z]",
+                  title: "Codice fiscale italiano di 16 caratteri (es: RSSMRA80A01H501U)",
+                  style: "text-transform: uppercase;" %>
+  <small class="form-text text-muted">Codice fiscale italiano di 16 caratteri (obbligatorio)</small>
+</div>
