Rinomino in funds

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -20,7 +20,7 @@
             <%= link_to 'Veicoli', vehicles_path, class: 'nav-link' %>
           </li>
           <li class="nav-item">
-            <%= link_to 'Categorie di fondi', projects_path, class: 'nav-link' %>
+            <%= link_to 'Fondi', funds_path, class: 'nav-link' %>
           </li>
           <% if current_user.admin? %>
             <li class="nav-item dropdown">
