--- a/app/views/reimboursements/show.html.erb
+++ b/app/views/reimboursements/show.html.erb
@@ -374,6 +374,7 @@
                             <% else %>
                               <!-- Dettagli spesa normale -->
                               <div class="small">
+                                <strong>Progetto:</strong> <%= expense.project %><br>
                                 <strong>Fornitore:</strong> <%= expense.supplier %><br>
                                 <!-- Allegato spesa normale -->
                                 <% if expense.electronic_invoice? && expense.has_invoice_pdf? %>
