--- a/app/views/bank_accounts/edit.html.erb
+++ b/app/views/bank_accounts/edit.html.erb
@@ -3,7 +3,7 @@
     <div class="col-md-8">
       <div class="card">
         <div class="card-header">
-          <h2 class="mb-0">Modifica Conto Bancario</h2>
+          <h2 class="mb-0">Modifica conto bancario</h2>
         </div>
         <div class="card-body">
           <%= render 'form', bank_account: @bank_account %>
