--- a/app/views/bank_accounts/index.html.erb
+++ b/app/views/bank_accounts/index.html.erb
@@ -2,7 +2,7 @@
   <div class="d-flex justify-content-between align-items-center mb-3">
     <h1><i class="fas fa-university me-2"></i>Conti Bancari</h1>
     <%= link_to new_bank_account_path, class: "btn btn-primary" do %>
-      <i class="fas fa-plus me-2"></i>Nuovo Conto Bancario
+      <i class="fas fa-plus me-2"></i>Nuovo conto bancario
     <% end %>
   </div>
 
@@ -70,7 +70,7 @@
       <h5>Nessun conto bancario trovato</h5>
       <p>Inizia aggiungendo il tuo primo conto bancario.</p>
       <%= link_to new_bank_account_path, class: "btn btn-primary" do %>
-        <i class="fas fa-plus me-2"></i>Aggiungi Conto Bancario
+        <i class="fas fa-plus me-2"></i>Aggiungi conto bancario
       <% end %>
     </div>
   <% end %>
