--- a/app/views/bank_accounts/show.html.erb
+++ b/app/views/bank_accounts/show.html.erb
@@ -7,7 +7,7 @@
   <% end %>
 
   <div class="d-flex justify-content-between align-items-center mb-4">
-    <h2>Dettagli Conto Bancario</h2>
+    <h2>Dettagli conto bancario</h2>
   </div>
 
   <div class="card">
