--- a/app/views/reimboursements/_form.html.erb
+++ b/app/views/reimboursements/_form.html.erb
@@ -94,7 +94,7 @@
         <div class="card-body">
           <div class="mb-3">
             <label class="form-label">Seleziona conto bancario</label>
-            <%= form.label :bank_account_id, "Conto Bancario", class: "form-label" %>
+            <%= form.label :bank_account_id, "conto bancario", class: "form-label" %>
             <%= form.collection_select :bank_account_id, 
                                       current_user.admin? ? BankAccount.all : current_user.bank_accounts, 
                                       :id, 
