--- a/app/views/reimboursements/_expense_fields.html.erb
+++ b/app/views/reimboursements/_expense_fields.html.erb
@@ -9,8 +9,8 @@
 
   <div class="row g-3">
     <!-- Campo importo unificato -->
-    <div class="col-md-4">
-      <%= f.label :amount, f.object.car? ? "Importo calcolato" : "Importo", class: "form-label" %>
+    <div class="col-md-3">
+      <%= f.label :amount, f.object.car? ? "Importo calcolato" : "Importo spesa", class: "form-label" %>
       <div class="input-group">
         <span class="input-group-text">€</span>
         <%= f.number_field :amount, 
@@ -23,7 +23,21 @@
       </div>
     </div>
     
-    <div class="col-md-4">
+    <!-- Campo requested_amount -->
+    <div class="col-md-3">
+      <%= f.label :requested_amount, "Importo richiesto", class: "form-label" %>
+      <div class="input-group">
+        <span class="input-group-text">€</span>
+        <%= f.number_field :requested_amount, 
+            step: 0.01, 
+            min: 0, 
+            class: "form-control", 
+            placeholder: "Importo richiesto come rimborso" %>
+      </div>
+      <small class="form-text text-muted">Importo che si richiede come rimborso (max. importo spesa)</small>
+    </div>
+    
+    <div class="col-md-3">
       <%= f.label :purpose, "Descrizione", class: "form-label" %>
       <%= f.text_field :purpose, class: "form-control", placeholder: "Descrivi la spesa..." %>
     </div>
@@ -33,7 +47,7 @@
       <%= f.date_field :date, class: "form-control", value: Date.current %>
     </div>
 
-    <div class="col-md-2">
+    <div class="col-md-1">
       <label class="form-label">Tipo</label>
       <div class="form-check">
         <%= f.radio_button :car, false, class: "form-check-input", id: "#{f.object_name}_car_false", checked: !f.object.car? %>
