--- a/app/views/reimboursements/show.html.erb
+++ b/app/views/reimboursements/show.html.erb
@@ -74,11 +74,11 @@
                 </div>
                 <div>
                   <h6 class="alert-heading mb-1">
-                    <i class="fas fa-rocket me-2"></i>Rimborso Creato con Successo!
+                    <i class="fas fa-rocket me-2"></i>Rimborso creato con successo!
                   </h6>
                   <p class="mb-2">Il tuo rimborso è stato registrato nel sistema. Ecco cosa succederà ora:</p>
                   <ul class="mb-2 small">
-                    <li><strong>Revisione:</strong> Un amministratore controllerà i tuoi giustificativi</li>
+                    <li><strong>Revisione:</strong> La segreteria controllerà i tuoi giustificativi</li>
                     <li><strong>Approvazione:</strong> Riceverai una notifica email per ogni aggiornamento</li>
                     <li><strong>Pagamento:</strong> Una volta approvato, il rimborso verrà elaborato</li>
                   </ul>
